--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="nl">
 <head>
   <meta charset="utf-8">
-  <title>IQuestion</title>
+  <title>iQuestion</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Questionnaire tool for Spine">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
